WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232229
[GTK][WPE] REGRESSION(
r284596
): Scrolling sometimes jumps to the top of the page during smooth mouse-wheel scrolling
https://bugs.webkit.org/show_bug.cgi?id=232229
Summary
[GTK][WPE] REGRESSION(r284596): Scrolling sometimes jumps to the top of the p...
Chris Lord
Reported
2021-10-25 03:06:49 PDT
If your mouse-wheel repeat is very frequent (>= 60Hz) or your machine is slow enough that you can receive more than one mouse-wheel event before the associated animation callback for smooth scrolling, the page will jump to 0,0. I have a one-line fix for this, but seeing if I can write a test to go with it.
Attachments
Patch
(5.53 KB, patch)
2021-10-25 04:37 PDT
,
Chris Lord
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Lord
Comment 1
2021-10-25 04:37:40 PDT
Created
attachment 442361
[details]
Patch
EWS
Comment 2
2021-10-25 05:35:35 PDT
Committed
r284778
(
243487@main
): <
https://commits.webkit.org/243487@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 442361
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-10-25 05:36:19 PDT
<
rdar://problem/84610912
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug