[GTK][WPE] REGRESSION(r284596): Scrolling sometimes jumps to the top of the page during smooth mouse-wheel scrolling https://bugs.webkit.org/show_bug.cgi?id=232229

Reviewed by Carlos Garcia Campos.

Source/WebCore:

Make sure that retargeting a smooth scroll animation before a frame
callback is called works correctly.

Test: fast/scrolling/gtk/repeated-mouse-wheel-smooth.html

* platform/ScrollAnimationSmooth.cpp:
(WebCore::ScrollAnimationSmooth::startAnimatedScrollToDestination):

LayoutTests:

Add test to make sure that retargeted smooth scrolling doesn't jump to
the top of the page unexpectedly.

* fast/scrolling/gtk/repeated-mouse-wheel-smooth-expected.txt: Added.
* fast/scrolling/gtk/repeated-mouse-wheel-smooth.html: Added.


Canonical link: https://commits.webkit.org/243487@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284778 268f45cc-cd09-0410-ab3c-d52691b4dbfc